--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
-    "serialport": "^12.0.0"
+    "serialport": "^12.0.0",
+    "usb": "^2.14.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
