--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@rushstack/eslint-patch": "^1.10.3",
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20.14.8",
     "@types/serialport": "^8.0.5",
     "@vitejs/plugin-vue": "^5.0.5",
