Icon/appname tweaks; color selector

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.app
-productName: electron-app
+productName: SerialPort+
 directories:
   buildResources: build
 files:
@@ -12,7 +12,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: electron-app
+  executableName: SerialPort+
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
